Fix alignment issues in timepicker.

--- a/resources/seneschal.css
+++ b/resources/seneschal.css
@@ -195,5 +195,5 @@ img {
 }
 
 .ui-timepicker-list {
-    text-align: left
+    text-align: left;
 }
